Add swag info about getting restaurant by id, user signUp and user signIngnIn
