# internal/delivery/http/v1/restaurant.go
@@ -24,10 +24,10 @@ type restaurantsSignInInput struct {
 	Password string `json:"password" valid:"length(4|32)"`
 }
 
-// @Summary Courier SignIn
-// @Tags couriers-auth
-// @Description courier sign in
-// @ModuleID courierSignIn
+// @Summary Restaurants SignIn
+// @Tags restaurants
+// @Description restaurant sign in
+// @ModuleID restaurantSignIn
 // @Accept  json
 // @Produce  json
 // @Param input body signInInput true "sign up info"
@@ -35,7 +35,7 @@ type restaurantsSignInInput struct {
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
 // @Failure default {object} response
-// @Router /couriers/sign-in [post]
+// @Router /restaurants/sign-in [post]
 func (h *Handler) restaurantsSignIn(ctx echo.Context) error {
 	var input restaurantsSignInInput
 
@@ -57,9 +57,10 @@ func (h *Handler) restaurantsSignIn(ctx echo.Context) error {
 }
 
 // @Summary Get All Restaurant
-// @Tags restaurant
-// @Description restaurant get all
-// @ModuleID restaurantGetAll
+// @Security UserAuth
+// @Tags restaurants
+// @Description get all restaurant for user
+// @ModuleID getAllRestaurant
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} domain.Restaurant
@@ -81,6 +82,19 @@ func (h *Handler) getRestaurants(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, restaurants)
 }
 
+// @Summary Get Restaurant By Id
+// @Security UserAuth
+// @Tags restaurants
+// @Description get restaurant by id for user
+// @ModuleID getRestaurantById
+// @Accept  json
+// @Produce  json
+// @Param rid path string true "Restaurant id"
+// @Success 200 {object} domain.Restaurant
+// @Failure 400,403,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /restaurants/{rid} [get]
 func (h *Handler) getRestaurantById(ctx echo.Context) error {
 	clientId, clientType, err := h.getClientParams(ctx)
 	if err != nil {
